<resources>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="app_name">apptbook-android</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="select_end_time">Select End Date</string>
    <string name="select_begin_time">Select Begin Date</string>
    <string name="appointment_description">Appointment Description</string>
    <string name="name">Name</string>
    <string name="print_confirmation">Print Confirmation?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appt_name_helper">i.e. John Doe</string>
    <string name="appt_name_desc">i.e. Going to see a movie.</string>
    <string name="confirm">Confirm</string>
    <string name="reset">reset</string>
    <string name="create">Create</string>
    <string name="title_help">
        <![CDATA[<p><h1>BookMe Help Center</h1>
        <p>In this section you can find information about the application, as well as a README.</p>

        </p>]]></string>
    <string name="created_by"><![CDATA[<B>Created By:</B> Matthew Berzinskas]]></string>
    <string name="version"><![CDATA[<B>Version:</B> 1.0]]></string>
    <string name="created_for"><![CDATA[<B>For:</B> CS410 Advanced Java Programming]]></string>
    <string name="usage"><![CDATA[
    <B>Usage:</B> To book an appointment, simply click <i>CREATE</i> from the main menu. Once an
appointment has been booked, you can view all existing appointments by clicking <i>VIEW</i>. In
<i>SEARCH</i> you can view all appointments belonging to a given owner, or search for appointments
between specific dates. In <i>HELP</i> you can reset the app and delete all stored appointments.]]>

    </string>
    <string name="btnReadme">Readme</string>
    <string name="btnExit">Exit</string>
    <string name="welcome">
        <![CDATA[<h1>Welcome to the BookMe Appointment Book App!</h1>]]></string>
    <string name="gettingStarted"><![CDATA[To get started, click <b>CREATE</b> below.</h1>]]></string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcomeSearch">
        <![CDATA[<h1>Search</h1>]]></string>
    <string name="gettingStartedSearch">
        <![CDATA[<p>Here you can search for all bookings by a given owner
        Or you can search for bookings between certain dates. </p>]]></string>
    <string name="searchByOwner">Select an owner to view all appointments.</string>
    <string name="searchByDates">-OR- Enter beginning and ending dates to find all appointments
    taking place in between.</string>
    <string name="view">View</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="enddate">EndDate</string>
    <string name="end_time">End Time</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="welcomeView"> <![CDATA[<h1>View All</h1>]]></string>
    <string name="startDate">Start Date</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="print_all">Print All For This Owner?</string>
    <string name="btnReset">Reset</string>
    <string name="booking_a_new_appointment">Booking a new appointment.</string>
</resources>