<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleSearch"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/welcomeSearch" />

    <TextView
        android:id="@+id/gettingStartedSearch"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/gettingStartedSearch" />

    <TextView
        android:id="@+id/mainCount"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp" />

    <TextView
        android:id="@+id/searchByOwner"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:text="@string/searchByOwner" />

    <Spinner
        android:id="@+id/searchBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/chboxPrintAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="210dp"
        android:text="@string/print_all" />

    <TextView
        android:id="@+id/searchByDates"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="285dp"
        android:text="@string/searchByDates"/>

    <TextView
        android:id="@+id/txtStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:layout_marginTop="320dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_marginTop="360dp"
        android:textSize="18sp"
        android:padding="10dp" />


    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enddate"
        android:layout_marginStart="200dp"
        android:layout_marginTop="320dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_marginStart="200dp"
        android:layout_marginTop="360dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="420dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="480dp"
        android:text="@string/exit" />

</RelativeLayout>