<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ApptActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appt_name"
        android:hint="@string/name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:background="@android:color/darker_gray"
        android:autofillHints=""/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appt_desc"
        android:hint="@string/appointment_description"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:background="@android:color/darker_gray"
        android:autofillHints=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_begin_time"
        android:id="@+id/beginTime"
        android:textSize="20sp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_end_time"
        android:padding="10dp"
        android:textSize="20sp" />

</LinearLayout>